added mobile styling

--- a/src/partials/_baseStyles.scss
+++ b/src/partials/_baseStyles.scss
@@ -5,7 +5,7 @@ html {
 a {
     text-decoration: none;
     color:inherit;
-    &:hover {
+    &:hover, &:focus, &:focus-within {
         color: $gold;
     }
 }
@@ -22,6 +22,7 @@ button {
     border: 1px solid black;
     cursor: pointer;
     position: relative;
+    z-index: 5;
     background-color: rgba(0, 0, 0, 0);
 }
 
@@ -30,15 +31,15 @@ button:after {
     background-color: $gold;
     opacity: 50%;
     width: 100%;
-    z-index: -1;
     position: absolute;
     height: 100%;
     top: 7px;
     left: 7px;
     transition: 0.2s;
+    z-index: -1;
 }
 
-button:hover:after {
+button:hover:after{
     top: 0px;
     left: 0px;
 }
@@ -51,11 +52,7 @@ hr {
     margin-bottom:10px;
 }
 
-@media (min-width: 768px) {
-    button {
-        padding: 13px 50px 13px;
-    }
-}
+
 
 img {
     width: 100%;
@@ -65,4 +62,10 @@ img {
     max-width: 1260px;
     width: 80%;
     margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+    button {
+        padding: 13px 50px 13px;
+    }
 }
