--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,3 +1,13 @@
-header {
-    // background-image: ;
+h1 {
+    transition: all .3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+
+    h1 {
+        font-size: 1.3rem;
+    }
+    h2 {
+        font-size: .9rem;
+    }
 }
