--- a/src/partials/_intro.scss
+++ b/src/partials/_intro.scss
@@ -1,11 +1,11 @@
 .intro {
+    background-color: $cream;
     .wrapper {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         padding:50px;
         align-items: center;
-
         .intro-text {
             width: 45%;
         }
@@ -14,4 +14,26 @@
             width: 40%;
         }
     }
+}
+
+@media (max-width: 768px) {
+    .intro {
+        .wrapper {
+            flex-direction: column;
+            padding: 0px;
+
+            .intro-text {
+                width: 100%;
+                text-align: center;
+                margin: 40px 0;
+            }
+
+            .intro-photo {
+                width: 80%;
+                margin-bottom: 40px;
+                margin-top:10px;
+            }
+        }
+    }
+    
 }
