--- a/src/partials/_nav.scss
+++ b/src/partials/_nav.scss
@@ -1,20 +1,36 @@
-
+.navBar {
+    position: sticky;
+    top: 0;
+    background-color: $cream;
+    z-index: 40;
+    display: block;
+}
 nav {
     display: flex;
-    // border: 1px solid red;
     align-items: center;
     justify-content: space-between;
     .logo {
-        width: 17%;
-        padding:10px;
+        width: 27%;
+        padding: 10px;
+        margin-left: 10px;
     }
 
     ul {
         display: flex;
-        padding:10px;
+        padding:8px 20px;
         li {
             list-style: none;
             padding: 10px;
         }
     }
 }   
+
+
+@media (max-width: 768px) {
+    nav {
+        .logo {
+            width:150px;
+        }
+    }
+    
+}
