--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -7,7 +7,16 @@ footer {
     text-align: center;
     p {
         margin: 0 auto;
+        font-size: .8rem;
         color:white;
         font-family: $primary-font;
+    }
+}
+
+@media (max-width: 768px) {
+    footer { 
+        p {
+            font-size: .6rem;
+        }
     }
 }
