--- a/src/partials/_intro.scss
+++ b/src/partials/_intro.scss
@@ -10,8 +10,17 @@
             width: 45%;
         }
 
-        .intro-photo {
+        .intro-photo {   
             width: 40%;
+            // box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+            // rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+            rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+            border-radius: 10px;
+            img {
+                border-radius: 10px;
+                display: block;
+            }
         }
     }
 }
