--- a/src/partials/_baseStyles.scss
+++ b/src/partials/_baseStyles.scss
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    background-color: $cream;
 }
 
 a {
@@ -45,11 +46,12 @@ button:hover:after{
 }
 
 hr {
-    color:rgba(255, 255, 255, 0.308);
-    width: 60%;
+    height: 1px;
+    background-color: #ccc;
+    border: none;
+    width: 80%;
     margin:0 auto;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-bottom:25px;
 }
 
 
