added contact page

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import "./partials/typography";
 @import "./partials/header";
 @import "./partials/intro";
+@import "./partials/contact";
 @import "./partials/slider";
 @import "./partials/footer";
 @import "./partials/gallery";
