--- a/src/partials/_gallery.scss
+++ b/src/partials/_gallery.scss
@@ -4,24 +4,62 @@
         color:white;
         font-size: 4rem;
     }
-    ul {
+    ul.images {
         display: flex;
         width: 100%;
         flex-wrap: wrap;
         align-items: center;
         margin: 0 auto;
         padding:0;
-        justify-content: center;
+        justify-content: space-around;
         li {
-            width: 20%;margin: 10px;
+            width: 25%;
+            // margin: 10px;
             list-style: none;
-            padding:10px;
+            padding:30px;
+            position: relative;
+            .fullscreen-image {
+                margin: 0 auto;
+                top: 0;
+                margin-top: 100px;
+                position: fixed;
+                z-index: 100;
+                left: 35%;
+                max-height: 80vh;
+                height:80vh;
+            }
+            .background-overlay {
+                height:100vh;
+                width:100vw;
+                position: fixed;
+                top:0;
+                left:0;
+                z-index: 99;
+                background-color: rgba(0, 0, 0, 0.719);
+            }
+            .exit {
+                font-size: 5rem;
+                color:$cream;
+                font-family: $primary-font;
+                font-weight:400;
+                position: absolute;
+                top:0;
+                right:10%;
+                &:hover, &:focus, &:focus-within {
+                    font-weight: 600;
+                    cursor: pointer;
+                }
+            }
+            img {
+                width: 100%;
+                height:100%;
+            }
         }
     }
     .gallery-header {
         background-image: url('../images/gallery-image.jpg');
         height:35vh;
-        background-position: bottom;
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
@@ -30,6 +68,9 @@
         margin-bottom: 50px;
     }
 }
+
+
+
 
 @media (max-width: 768px) {
     .gallery ul li {
