--- a/styles/App.css
+++ b/styles/App.css
@@ -565,6 +565,7 @@ footer p {
 }
 .gallery {
   text-align: center;
+  overflow: hidden;
 }
 .gallery h1 {
   color: white;
@@ -611,6 +612,7 @@ footer p {
   font-weight: 400;
   position: absolute;
   top: 0;
+  z-index: 101;
   right: 10%;
 }
 .gallery ul.images li .exit:hover, .gallery ul.images li .exit:focus, .gallery ul.images li .exit:focus-within {
@@ -618,7 +620,6 @@ footer p {
   cursor: pointer;
 }
 .gallery ul.images li img {
-  width: 100%;
   height: 100%;
 }
 .gallery .gallery-header {
@@ -633,8 +634,39 @@ footer p {
   margin-bottom: 50px;
 }
 
-@media (max-width: 768px) {
-  .gallery ul li {
+@media (max-width: 1240px) {
+  .gallery ul.images li {
     width: 80%;
+  }
+  .gallery ul.images li .fullscreen-image {
+    max-height: 100%;
+    position: absolute;
+    height: 100vh;
+    margin: 0 auto;
+    width: auto;
+    top: 0px;
+    left: 22%;
+  }
+  .gallery ul.images li .exit {
+    top: 5%;
+  }
+}
+@media (max-width: 820px) {
+  .gallery ul.images li {
+    width: 80%;
+  }
+  .gallery ul.images li .fullscreen-image {
+    max-height: 100%;
+    position: absolute;
+    height: auto;
+    width: 80vw;
+    top: 100px;
+    left: 0;
+    margin-left: 10%;
+  }
+  .gallery ul.images li .exit {
+    top: 8%;
+    right: 14%;
+    font-size: 3rem;
   }
 }
